# rins

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/analyse-sim/: SKILL.md
.claude/skills/calibrate/: skill.md
.claude/skills/verify-events/: skill.md
benches/: fixtures.rs  simulation_perf.rs
docs/: calibration.md  event-flow.md  event-sourcing.md  market-mechanics.md  performance.md  phenomena.md  roadmap.md  ui.md
scripts/: analyse_gul.py  analyse_sim.py  calibrate.py  event_index.py  plot_distributions.py  pooling_cdf.py  verify_claims.py  verify_insolvency.py  verify_mechanics.py  verify_panel_integrity.py  verify_quoting_flow.py
src/: analysis.rs  broker.rs  config.rs  events.rs  insured.rs  insurer.rs  lib.rs  main.rs  market.rs  perils.rs  simulation.rs  syndicate.rs  types.rs
ui/: index.html  package-lock.json  package.json  serve.js
ui/js/: browser.test.js  data.js  data.test.js  panel1.js  panel1.test.js  panel10.js  panel10.test.js  panel2.js  panel2.test.js  panel3.js  panel3.test.js  panel4.js  panel4.test.js  panel5.js  panel5.test.js  panel6.js  panel6.test.js  panel7.js  panel7.test.js  panel8.js  panel8.test.js  panel9.js  panel9.test.js  shell.js  shell.test.js
