[package]
name = "rins"
version = "0.1.0"
edition = "2024"
autobenches = false

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "simulation_perf"
harness = false
